--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -65,7 +65,7 @@
 						<string key="NSFrame">{{16, 550}, {288, 264}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="326047165"/>
+						<reference key="NSNextKeyView" ref="560746229"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -77,7 +77,7 @@
 						<string key="NSFrame">{{12, 546}, {296, 275}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="560746229"/>
+						<reference key="NSNextKeyView" ref="404727727"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
@@ -129,7 +129,10 @@
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 										<bool key="IBUIAlwaysBounceVertical">YES</bool>
-										<int key="IBUISeparatorStyle">1</int>
+										<object class="NSColor" key="IBUISeparatorColor" id="591932573">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MCAwIDAAA</bytes>
+										</object>
 										<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 										<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 										<float key="IBUIRowHeight">44</float>
@@ -163,7 +166,7 @@
 												<string key="NSFrame">{{0, 14}, {288, 42}}</string>
 												<reference key="NSSuperview" ref="550177060"/>
 												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="658427827"/>
+												<reference key="NSNextKeyView" ref="495034088"/>
 												<string key="NSReuseIdentifierKey">_NS:328</string>
 												<bool key="IBUIOpaque">NO</bool>
 												<bool key="IBUIClipsSubviews">YES</bool>
@@ -171,10 +174,7 @@
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												<string key="IBUIText">Спасибо за покупку</string>
-												<object class="NSColor" key="IBUITextColor" id="591932573">
-													<int key="NSColorSpace">1</int>
-													<bytes key="NSRGB">MCAwIDAAA</bytes>
-												</object>
+												<reference key="IBUITextColor" ref="591932573"/>
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">1</int>
 												<float key="IBUIMinimumFontSize">10</float>
@@ -187,6 +187,21 @@
 													<string key="NSName">Helvetica</string>
 													<double key="NSSize">17</double>
 													<int key="NSfFlags">16</int>
+												</object>
+											</object>
+											<object class="IBUIImageView" id="495034088">
+												<reference key="NSNextResponder" ref="550177060"/>
+												<int key="NSvFlags">292</int>
+												<string key="NSFrame">{{0, 55}, {289, 1}}</string>
+												<reference key="NSSuperview" ref="550177060"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="658427827"/>
+												<string key="NSReuseIdentifierKey">_NS:567</string>
+												<bool key="IBUIUserInteractionEnabled">NO</bool>
+												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<object class="NSCustomResource" key="IBUIImage">
+													<string key="NSClassName">NSImage</string>
+													<string key="NSResourceName">seporator.png</string>
 												</object>
 											</object>
 										</array>
@@ -220,12 +235,12 @@
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">0</int>
 												<float key="IBUIMinimumFontSize">10</float>
-												<object class="IBUIFontDescription" key="IBUIFontDescription">
-													<int key="type">2</int>
+												<object class="IBUIFontDescription" key="IBUIFontDescription" id="1064426436">
+													<int key="type">1</int>
 													<double key="pointSize">20</double>
 												</object>
-												<object class="NSFont" key="IBUIFont">
-													<string key="NSName">Helvetica-Bold</string>
+												<object class="NSFont" key="IBUIFont" id="993165611">
+													<string key="NSName">Helvetica</string>
 													<double key="NSSize">20</double>
 													<int key="NSfFlags">16</int>
 												</object>
@@ -233,7 +248,7 @@
 											<object class="IBUIImageView" id="585436960">
 												<reference key="NSNextResponder" ref="267428017"/>
 												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{199, 16}, {13, 13}}</string>
+												<string key="NSFrame">{{199, 14}, {14, 15}}</string>
 												<reference key="NSSuperview" ref="267428017"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="578683265"/>
@@ -248,7 +263,7 @@
 											<object class="IBUILabel" id="883645332">
 												<reference key="NSNextResponder" ref="267428017"/>
 												<int key="NSvFlags">292</int>
-												<string key="NSFrame">{{133, 9}, {66, 25}}</string>
+												<string key="NSFrame">{{131, 8}, {66, 25}}</string>
 												<reference key="NSSuperview" ref="267428017"/>
 												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="585436960"/>
@@ -264,15 +279,8 @@
 												<int key="IBUIBaselineAdjustment">1</int>
 												<float key="IBUIMinimumFontSize">10</float>
 												<int key="IBUITextAlignment">2</int>
-												<object class="IBUIFontDescription" key="IBUIFontDescription">
-													<int key="type">2</int>
-													<double key="pointSize">17</double>
-												</object>
-												<object class="NSFont" key="IBUIFont">
-													<string key="NSName">Helvetica-Bold</string>
-													<double key="NSSize">17</double>
-													<int key="NSfFlags">16</int>
-												</object>
+												<reference key="IBUIFontDescription" ref="1064426436"/>
+												<reference key="IBUIFont" ref="993165611"/>
 											</object>
 											<object class="IBUIImageView" id="578683265">
 												<reference key="NSNextResponder" ref="267428017"/>
@@ -359,7 +367,7 @@
 						<string key="NSFrame">{{100, 511}, {120, 40}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="404727727"/>
+						<reference key="NSNextKeyView" ref="158805250"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -421,6 +429,7 @@
 						<string key="NSFrame">{{259, 486}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -488,7 +497,7 @@
 				<string key="NSFrameSize">{288, 264}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="158805250"/>
+				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">2</int>
@@ -703,14 +712,6 @@
 						<reference key="destination" ref="404727727"/>
 					</object>
 					<int key="connectionID">96</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="191373211"/>
-						<reference key="destination" ref="372490531"/>
-					</object>
-					<int key="connectionID">98</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -1013,6 +1014,7 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="1018294338"/>
 							<reference ref="749998345"/>
+							<reference ref="495034088"/>
 						</array>
 						<reference key="parent" ref="696399524"/>
 					</object>
@@ -1059,6 +1061,11 @@
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Menu Table View</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">99</int>
+						<reference key="object" ref="495034088"/>
+						<reference key="parent" ref="550177060"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1101,12 +1108,13 @@
 				<string key="90.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="93.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="95.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="99.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">98</int>
+			<int key="maxID">99</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1341,6 +1349,7 @@
 			<string key="paper_bottom.png">{288, 14}</string>
 			<string key="paper_top.png">{288, 14}</string>
 			<string key="rybl.png">{23, 26}</string>
+			<string key="seporator.png">{289, 1}</string>
 			<string key="table_mask.png">{296, 275}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">931</string>
